--- a/24/starbuzz/index.html
+++ b/24/starbuzz/index.html
@@ -33,6 +33,7 @@
         (if you want), packaged, and shipped to your door.
       </p>
     </div>
+    <div class="ad"></div>
     <div class="main">
       <h1>QUALITY COFFEE, QUALITY CAFFEINE</h1>
       <p>
