新建27文件夹

--- a/27/starbuzz/index.html
+++ b/27/starbuzz/index.html
@@ -7,20 +7,15 @@
   </head> 
 
   <body>
-    <div class="header">
+    <header class="top">
       <img src="images/header.gif" alt="Starbuzz Coffee header image">
-    </div>
-    <div class="award">
+    </header>
+    <award>
       <img src="images/award.gif" alt="Roaster of the Year award">
-    </div>
-    <div class="coupon">
-      <a href="freecoffee.html" title="Click here to get your free coffee">
-      <img src="images/ticket.gif" alt="Starbuzz coupon ticket">
-      </a>
-    </div>
-    <div class="tableContainer">
-    <div class="tableRow">
-    <div class="drinks">
+    </award>
+    <tableContainer>
+    <tableRow>
+    <drinks>
       <h1>BEVERAGES</h1>
       <p>House Blend, $1.49</p>
       <p>Mocha Cafe Latte, $2.35</p>
@@ -37,7 +32,7 @@
       <p>Cranberry Antioxidant Blast, $2.99</p>
       <p>Chai Chiller, $2.99</p>
       <p>Black Brain Brew, $2.99</p>
-    </div>
+    </drinks>
     <div class="main">
       <h1>QUALITY COFFEE, QUALITY CAFFEINE</h1>
       <p>
@@ -85,7 +80,7 @@
       </p>
     </div>
 
-    <div class="sidebar">
+    <sidebar>
       <p class="beanheading">
         <img src="images/bag.gif" alt="Bean Machine bag">
         <br>
@@ -105,16 +100,20 @@
         enter your order, and behind the scenes, your coffee is roasted, ground 
         (if you want), packaged, and shipped to your door.
       </p>
-    </div>
-    </div>
-    </div>
-
-    <div class="footer">
+    </sidebar>
+    </tableRow>
+    </tableContainer>
+    <coupon>
+      <a href="freecoffee.html" title="Click here to get your free coffee">
+      <img src="images/ticket.gif" alt="Starbuzz coupon ticket">
+      </a>
+    </coupon>
+    <footer>
       &copy; 2012, Starbuzz Coffee
       <br>
       All trademarks and registered trademarks appearing on 
       this site are the property of their respective owners.
-    </div>
+    </footer>
 
   </body>
 </html>
