仿站第二版

--- a/仿站/index.html
+++ b/仿站/index.html
@@ -4,8 +4,8 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
-	<link rel="stylesheet" href="slick.css">
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="css/slick.css">
+	<link rel="stylesheet" href="css/style.css">
 </head>
 
 <body class="page-home" id="page_top">
@@ -20,17 +20,15 @@
 				<li><a>中文</a></li>
 			</ul>
 			<h1 class="logo">
-				<a><img src="logo_pc.png" alt="KOBELCO 神戸製鋼" class="js-switch-image"></a>
+				<a><img src="img/logo_pc.png" alt="KOBELCO 神戸製鋼" class="js-switch-image"></a>
 			</h1>
 			<div class="header-unit">
 				<div class="search-unit">
-						<input type="hidden" name="site" value="EJ4JC91U">
-						<input type="hidden" name="charset" value="UTF-8">
-						<input type="hidden" name="design" value="1">
+
 						<div class="search-field">
 							<div class="search-text">
 								<input type="text" name="query" value="" id="sSS_searchQuery" placeholder="検索したいワードを入力してください" class="box-search">
-								<input type="image" src="icon_search.svg" alt="検索" name="submit" id="submit" class="btn btn-search">
+								<input type="image" src="img/icon_search.svg" alt="検索" name="submit" id="submit" class="btn btn-search">
 							</div>
 							<div class="search-radio">
 								<ul class="field-check">
@@ -50,8 +48,7 @@
 			</div>
 		</div>
 	</header>
-	<!-- /l-header: [共通]ヘッダー -->
-	<!-- navigation: [共通]グローバルナビゲーション -->
+
 	<nav aria-label="グローバルナビゲーション">
 		<div class="l-navbar js-nav-pc">
 			<ul class="global-nav">
@@ -140,7 +137,9 @@
 	</nav>
 
 <div>
-  <img src="topslide_lplink_230725.jpg">
+  <a href="#">
+  <img src="img/topslide_lplink_230725.jpg">
+	</a>
 </div>
 
 <div class="l-top-news-marquee">
@@ -152,14 +151,14 @@
 						<div class="news-body">
 							<div class="news-body-row">
 								<ul class="news-nav">
-									<li><a href="#" class="js-btn-toggle"><img src="btn_stop.png" alt=""></a></li>
-									<li><a href="#" class="js-btn-prev"><img src="btn_prev.png" alt=""></a></li>
-									<li><a href="#" class="js-btn-next"><img src="btn_next.png" alt=""></a></li>
+									<li><a href="#" class="js-btn-toggle"><img src="img/btn_stop.png" alt=""></a></li>
+									<li><a href="#" class="js-btn-prev"><img src="img/btn_prev.png" alt=""></a></li>
+									<li><a href="#" class="js-btn-next"><img src="img/btn_next.png" alt=""></a></li>
 								</ul>
 								<div class="news-text">
 									<div class="js-news" style="text-indent: 0px; display: block;">
 										<time class="js-news-date">2023年11月7日 </time>
-										<span class="js-news-text"><a href="/releases/1214104_15541.html">「PRIDE指標2023」における3年連続ゴールド受賞について</a></span>
+										<span class="js-news-text"><a href="#">「PRIDE指標2023」における3年連続ゴールド受賞について</a></span>
 									</div>
 								</div>
 							</div>
