仿站第三版

--- a/许子陆/index.html
+++ b/许子陆/index.html
@@ -9,6 +9,9 @@
 </head>
 
 <body class="page-home" id="page_top">
+
+</script>
+	<!-- l-header: [共通]ヘッダー -->
 	<header id="header" class="l-header">
 		<div class="l-inner">
 			<ul class="header-link link-lang">
@@ -89,7 +92,13 @@
 					<dl class="nav-category js-accordion-megamenu">
 						<dt class="nav-label nav-ttl js-accordion-head" tabindex="0"><a href="/sustainability/index.html">サステナビリティ</a></dt>
 						<dd class="nav-contents js-accordion-body">
+							<div class="nav-contents-inner">
+								<div class="nav-contents-row">
+									<div class="nav-contents-col col4-4">
 										<div class="nav-link-head">サステナビリティ</div>
+									</div>
+								</div>
+							</div>
 						</dd>
 					</dl>
 				</li>
@@ -97,7 +106,13 @@
 					<dl class="nav-category js-accordion-megamenu">
 						<dt class="nav-label nav-ttl js-accordion-head" tabindex="0"><a href="/ir/">株主・投資家情報</a></dt>
 						<dd class="nav-contents js-accordion-body">
+							<div class="nav-contents-inner">
+								<div class="nav-contents-row">
+									<div class="nav-contents-col col4-4">
 										<div class="nav-link-head">株主・投資家情報</div>
+									</div>
+								</div>
+							</div>
 						</dd>
 					</dl>
 
@@ -151,5 +166,10 @@
 					</div>
 				</div>
 			</div>
+
+
+
+
+	
 </body>
 </html>
